--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "academicons": "^1.9.2",
     "autoprefixer": "^10.4.16",
+    "gsap": "^3.12.3",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
