--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "academicons": "^1.9.2",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
     "gsap": "^3.12.3",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.31",
