--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "gsap": "^3.12.3",
     "leaflet": "^1.9.4",
+    "nth-check": ">=2.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,8 +21,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.5",
-    "web-vitals": "^2.1.4",
-    "nth-check": ">=2.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.1",
     "nth-check": ">=2.0.1"
   }
 }
