--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "paula",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://paulavoorheis.com",
+  "description": "Paula Voorheis' portfolio website",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@react-google-maps/api": "^2.19.2",
